Fix spacing.

--- a/src/components/People/People.module.css
+++ b/src/components/People/People.module.css
@@ -11,7 +11,7 @@
 }
 
 .ListItemsWarper {
-  width: 16.5rem;
+  width: 14.5rem;
   margin: 1rem;
   display: flex;
   align-items: center;
